# 1c-barcode-generator

./: .gitignore  .gitmodules  AddInNative.def  AddInNative.rc  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.md  vcpkg.json
.github/workflows/: ci.yml
docs/: README.md  architecture.md  implementation-plan.md  uml-class-diagram.puml
include/common/: barcode_matrix.h  barcode_options.h  barcode_types.h
include/component/: component_interface.h
include/encoders/: aztec_encoder.h  datamatrix_encoder.h  iencoder.h  qr_encoder.h
include/factories/: encoder_factory.h
include/renderers/: svg_renderer.h
include/services/: barcode_service.h
src/: dllmain.cpp
src/component/: component_interface.cpp
src/encoders/: aztec_encoder.cpp  datamatrix_encoder.cpp  qr_encoder.cpp
src/factories/: encoder_factory.cpp
src/renderers/: svg_renderer.cpp
src/services/: barcode_service.cpp
tests/: test_aztec_encoder.cpp  test_barcode_service.cpp  test_component_interface_unicode.cpp  test_datamatrix_encoder.cpp  test_encoder_factory.cpp  test_qr_encoder.cpp  test_svg_renderer.cpp
